# 6obcy-desktop-app

./: .gitignore  CODE_OF_CONDUCT.md  README.md  index.html  package.json  vite.config.js
.github/workflows/: release.yml
libs/rust/store/: Cargo.toml
libs/rust/websocket/: Cargo.toml
src/: Chat.jsx  Chat.scss  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AutoConnectBtn.jsx  ChatMessages.jsx  ConnectButton.jsx  Modal.jsx  ModalCaptcha.jsx  WelcomeMessage.jsx
src/hooks/: useKeypress.jsx
src/styles/: Buttons.scss  Forms.scss  Icons.scss  Modals.scss
