[package]
name = "app"
version = "0.2.2"
description = "6obcy Desktop App"
authors = ["Sebastian Korotkiewicz"]
license = "MIT"
repository = "https://github.com/skorotkiewicz/6obcy-desktop-app/"
default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde = "1.0" 
serde_json = "1.0"
tauri = { version = "1.0.5", features = ["api-all"] }
tokio = { version = "1.17", features = ["net", "sync"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures = "*"
http = "*"
futures-util = "0.3" 
tauri-plugin-store = { path = "../libs/rust/store" }
randua = { path = "../libs/rust/randua" }


[dependencies.tungstenite]
version = "0.17.3"

[dependencies.native-tls-crate]
optional = true
package = "native-tls"
version = "0.2.7"

[dependencies.rustls]
optional = true
version = "0.20.0"

[dependencies.rustls-native-certs]
optional = true
version = "0.6.1"

[dependencies.tokio-native-tls]
optional = true
version = "0.3.0"

[dependencies.tokio-rustls]
optional = true
version = "0.23.0"

[dependencies.webpki]
optional = true
version = "0.22.0"

[dependencies.webpki-roots]
optional = true
version = "0.22.1"

# [dependencies.tauri-plugin-store]
# git = "https://github.com/tauri-apps/tauri-plugin-store"
# branch = "dev"
# # tag = "v0.1.0"

# [dependencies.tauri-plugin-websocket]
# git = "https://github.com/tauri-apps/tauri-plugin-websocket"
# branch = "dev"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
